--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,6 +1,19 @@
-<canvas id="c" width="450" height="450" style="border:1px solid #aaa"></canvas>
+<canvas id="c" width="950" height="450" style="border:1px solid #aaa"></canvas>
+
+
 
 <div style="display: inline-block; margin-left: 10px">
 
-    <button id="addmore" class="btn btn-info" (click)="addTable()">Add table</button><br>
+    <button id="addmore" class="btn btn-info" (click)="addShape()">Add more shapes</button><br>
+
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="save()">Save </button><br>
+
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="load()">Load </button><br>
+
+
+
 </div>
