--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
 
 
 <div style="display: inline-block; margin-left: 10px">
-
+    <p></p>
+    <input [(ngModel)]="numberseat" placeholder="number of seat">
+    <br/>
     <button id="addmore" class="btn btn-info" (click)="addShape()">Add more shapes</button><br>
 
     <p></p>
@@ -15,5 +17,7 @@
     <button id="addmore" class="btn btn-info" (click)="load()">Load </button><br>
 
 
+    <p></p>
 
+    <button id="addmore" class="btn btn-info" (click)="Delete()">Delete </button><br>
 </div>
