--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,4 +20,24 @@
     <p></p>
 
     <button id="addmore" class="btn btn-info" (click)="Delete()">Delete </button><br>
+
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="SelectItem()">Select item 1 </button><br>
+
+
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="ZoomIn()">ZoomIn </button><br>
+
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="ZoomOut()">ZoomOut </button><br>
+
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="ZoomReset()">ZoomReset </button><br>
+    <p></p>
+
+    <button id="addmore" class="btn btn-info" (click)="changeWidth()">Change width </button><br>
 </div>
